@@ -7,13 +7,6 @@
 
   <include package=".browser" />
 
-  <browser:page
-      name="migrate-poi.html"
-      for="Products.CMFPlone.interfaces.IPloneSiteRoot"
-      permission="cmf.ManagePortal"
-      class=".migration.Migration"
-      />
-
   <subscriber
       for="Products.Poi.adapters.IResponse
            zope.lifecycleevent.interfaces.IObjectModifiedEvent"
